Fix invisible Reset filter button in some themes (https://github.com/woocommerce/woocommerce-blocks/pull/7111)

--- a/plugins/woocommerce-blocks/assets/js/base/components/filter-reset-button/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/filter-reset-button/style.scss
@@ -1,8 +1,6 @@
 .wc-block-components-filter-reset-button {
-	background: transparent;
-	border: none;
+	@include text-button();
 	cursor: pointer;
-	font-size: inherit;
 
 	&:not([disabled]):hover {
 		text-decoration: underline;
